--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,115 @@
+@import url('https://fonts.googleapis.com/css?family=Chakra+Petch|Space+Mono&display=swap');
+/*@import url('https://kit.fontawesome.com/c8dc45cec1.js" crossorigin="anonymous');*/
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.FrontPage{
+  display: grid;
+  height: 100vh;
+  grid-template-columns: 1fr 350px;
+  grid-template-rows: auto 1fr;
+}
+.tami{
+  position: absolute;
+  width: 100%;
+  z-index: -1;
+}
+.Nav{
+  grid-column-start:1;
+  grid-column-end:3;
+  grid-row: 1/2;
+  padding: 10px;
+  background-color: black;
+}
+
+.MainContent{
+  grid-column:1;
+  grid-row:2/2;
+}
+.SideBar{
+  grid-column:2;
+  grid-row: 2/2;
+  background-color: gainsboro;
+}
+.HomeButton {
+  float:left;
+  margin: 7px;
+  border:0;
+  border-radius: 3px;
+  background-color: black;
+}
+.HomeLogo {
+  width: 35px;
+}
+.MainHeader {
+  display: inline-block;
+  margin:5px;
+  margin-left: 10px;
+  text-align: center;
+  color:whitesmoke;
+  font-family: 'Chakra Petch' ;
+}
+.TopicsListHeader {
+  margin-left: 77px;
+}
+.SelectedThreadsHeader {
+  font-family: "Space Mono";
+  margin-left: 30px;
+}
+
+.LoginButton {
+  border: 0;
+  border-radius: 3px;
+  float:right;
+  margin: 7px;
+  padding: 7px;
+  width: 140px;
+  background-color: gainsboro;
+  font-family: "Space Mono";
+  font-size: medium;
+  color: white;
+  background-color: black;
+}
+.signInLogo{
+  width: 25px;
+  float:right;
+}
+.TopicsList{
+  list-style:none;
+  min-width: auto;
+  margin-right: 30px;
+  margin-left: 40px;
+}
+.TopicsList li {
+  padding: 1px;
+  background-color: whitesmoke;
+  margin:0;
+  border-radius: 5px;
+}
+
+.TopicsList li:nth-of-type(2n) {
+  background: white;
+}
+
+.Topic {
+  margin: 10px;
+}
+
+.TopicName {
+  margin:0;
+}
+
+.TopicDescription {
+  margin:10px;
+  margin-bottom:15px;
+}
+.SelectedThreadsList {
+  list-style: none;
+
 }
