--- a/src/Apps.css
+++ b/src/Apps.css
@@ -99,6 +99,60 @@ body {
   margin-right: 30px;
   margin-left: 40px;
 }
+.CommentBoxContainer {
+
+}
+
+.CommentBoxForm{
+
+  width: 800px;
+  margin: 50px auto;
+  padding: 50px;
+  background-color: whitesmoke;
+  border-radius: 5px;
+  border: 1px;
+  border-style: solid;
+  border-color: gainsboro;
+
+}
+
+.CommentArea{
+  width: 800px;
+  height: 300px;
+  margin: auto;
+  font-size: large;
+  font-family: "Space Mono";
+  border-radius: 5px;
+  border: none;
+}
+
+.ForumUserHeader{
+
+}
+.UserNameField{
+  margin: auto;
+  width: 800px;
+  height: 30px;
+  border-radius: 5px;
+  border: none;
+  font-size: large;
+  font-family: "Space Mono";
+}
+.CommentSubmitButton{
+  margin: 40px 0;
+  padding: 10px;
+  width: 150px;
+  border-radius: 5px;
+  border:none;
+  font-size: medium;
+  font-family: "Space Mono";
+  font-weight: bold;
+  color: whitesmoke;
+  background-color: black;
+
+}
+
+
 .TopicsList li {
   padding: 1px;
   background-color: whitesmoke;
